added data-bs-ride & interval for carousel transition, added sizing to the images in carousel

--- a/index.html
+++ b/index.html
@@ -35,16 +35,16 @@
         </div>
       </nav>
 
-    <div id="carouselExample" class="carousel slide">
+    <div id="carouselExample" class="carousel slide" data-bs-ride="carousel" data-bs-interval="2500">
         <div class="carousel-inner">
           <div class="carousel-item active">
-            <img src="assets/imgs/amirali-mirhashemian-ZSukCSw5VV4-unsplash.jpg" class="d-block w-100" alt="...">
+            <img src="assets/imgs/amirali-mirhashemian-ZSukCSw5VV4-unsplash.jpg" class="d-block w-100 carouselPic" alt="...">
           </div>
           <div class="carousel-item">
-            <img src="assets/imgs/sanket-shah-eEWlcfydzQ4-unsplash.jpg" class="d-block w-100" alt="...">
+            <img src="assets/imgs/sanket-shah-eEWlcfydzQ4-unsplash.jpg" class="d-block w-100 carouselPic" alt="...">
           </div>
           <div class="carousel-item">
-            <img src="assets/imgs/shreyak-singh-0j4bisyPo3M-unsplash.jpg" class="d-block w-100" alt="...">
+            <img src="assets/imgs/shreyak-singh-0j4bisyPo3M-unsplash.jpg" class="d-block w-100 carouselPic" alt="...">
           </div>
         </div>
         <button class="carousel-control-prev" type="button" data-bs-target="#carouselExample" data-bs-slide="prev">
