added about section, with 2 images sharing the left side and aboutText sharing the right

--- a/index.html
+++ b/index.html
@@ -56,6 +56,36 @@
           <span class="visually-hidden">Next</span>
         </button>
       </div>
+
+      <section id="about">
+        <div class="about">
+            <div class="aboutImages">
+                <div class="aboutImgOne">
+                    <img src="assets/imgs/raman-sqcH2q7lkvo-unsplash.jpg" alt="">
+                </div>
+                <div class="aboutImgTwo">
+                    <img src="assets/imgs/vinitha-v-LPnJ146r9Mg-unsplash.jpg" alt="">
+                </div>
+            </div>
+            <div class="aboutText">
+                <h1>About Us</h1>
+                <p>
+                    "We offer delectable dining, takeaway, and delivery services. 
+                    We are known for our delicious Indian food service and our 
+                    innovative take on traditional cuisine. We have been praised 
+                    for providing the best Indian food and attracting customers 
+                    with great hospitality by warmhearted personnel. We are perfect 
+                    for people who are fond of Indian food and are longing to try 
+                    every Indian dish. Our restaurant's sole purpose is to satisfy 
+                    our customers' hunger by serving Indian food prepared with authentic 
+                    Indian flavor, a blend of rich Indian spices, and a dash of love. 
+                    We pledge to deliver cuisine prepared with the highest quality and 
+                    freshest ingredients."
+                </p>
+                <button class="aboutBtn">Learn More</button>
+            </div>
+        </div>
+      </section>
     
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
 </body>
