added quote section

--- a/index.html
+++ b/index.html
@@ -90,6 +90,19 @@
         </div>
       </section>
 
+      <section id="quote" style="height: 500px;">
+        <div class="quoteContainer">
+            <span class="quotation">"</span>
+            <h3 class="quoteH3">
+                There is no sincerer love than the love of food.
+            </h3>
+            <p class="pCite">
+                George Bernard Shaw
+            </p>
+            <span class="quotation quotationEnd"><i>"</i></span>
+        </div>
+      </section>
+
       <div>
 
       </div>
