removed style height 500px from html after completing quote section

--- a/index.html
+++ b/index.html
@@ -90,7 +90,7 @@
         </div>
       </section>
 
-      <section id="quote" style="height: 500px;">
+      <section id="quote">
         <div class="quoteContainer">
             <span class="quotation">"</span>
             <h3 class="quoteH3">
