added services section and provided initial styles

--- a/index.html
+++ b/index.html
@@ -103,6 +103,37 @@
         </div>
       </section>
 
+      <section id="services">
+        <div class="services">
+            <div class="serviceImgs">
+                <div class="serviceImg1">
+                    <img src="/assets/imgs/jacob-antony-H0_rN4gHc4k-unsplash.jpg" alt="">
+                </div>
+                <div class="serviceImg2">
+                    <img src="assets/imgs/saktheeswaran-govindarajan-yCIcDyKm440-unsplash.jpg" alt="">
+                </div>
+            </div>
+
+            <div class="serviceOfferings">
+                <div class="offering">
+                    <img src="assets/imgs/take-away.png" alt="">
+                    <h3>Shop Collection</h3>
+                    <p>Order online and collect from the shop</p>
+                </div>
+                <div class="offering">
+                    <img src="assets/imgs/online-order.png" alt="">
+                    <h3>Order Online</h3>
+                    <p>Make online orders</p>
+                </div>
+                <div class="offering">
+                    <img src="assets/imgs/receiver.png" alt="">
+                    <h3>Hotline</h3>
+                    <p>We are here to answer any queries during our operating hours</p>
+                </div>
+            </div>
+        </div>
+      </section>
+
       <div>
 
       </div>
