--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <link rel="stylesheet" href="assets/css/styles.css">
 </head>
 <body>
-    <nav class="navbar navbar-expand-lg bg-body-tertiary nav">
+    <nav class="navbar navbar-expand-lg bg-body-tertiary nav sticky-top">
         <div class="container-fluid">
         <!-- Logo on the left -->
         <a class="navbar-brand" href="#">
