--- a/index.html
+++ b/index.html
@@ -201,6 +201,42 @@
         </div>
       </section>
 
+      <footer id="footer">
+        <div class="logo">
+          <img src="assets/imgs/a2b5fe31-f4cd-4590-8b94-4918a33076e2_logo.jpg" alt="">
+          <div class="socials">
+            <a href="https://www.facebook.com/PalmIndiaPIR" target="_blank" class="facebook">
+              <img src="assets/imgs/facebook.png" alt="">
+            </a>
+            <a href="https://www.instagram.com/palmindiarestaurantcarrollton/">
+              <img src="assets/imgs/instagram.png" alt="">
+            </a>
+            <a href="https://www.google.com/search?q=Palm+India+Restaurant&stick=H4sIAAAAAAAA_-NgU1I1qLAwM0k2Mk01tLQ0S0o2NjW3MqgwSUxLNE80TzNNMkuzTLNMXsQqGpCYk6vgmZeSmagQlFpcklhalJhXAgBCLXYcQQAAAA&hl=en-GB&mat=CWfEMK6BXPcfElYB8pgkaMxcMENQGehOXhDz8MzqfqLq-Fv4XmoRWlN-kKAM9krzChcykImclRARtLzA2Gc4pO2wdLiYH_Dvg5JKYD6JYCkfawpwYeffpwh_dIni-gvJqw&authuser=0">
+              <img src="assets/imgs/google.png" alt="">
+            </a>
+            <a href="https://www.yelp.com/biz/palm-india-restaurant-carrollton">
+              <img src="assets/imgs/yelp.png" alt="">
+            </a>
+          </div>
+        </div>
+        <div class="contact">
+          <a href="https://www.google.com/maps/place/2548+Dickerson+Pkwy,+Carrollton,+TX+75006/@32.9820763,-96.9194318,17z/data=!3m1!4b1!4m6!3m5!1s0x864c25ff386bcc19:0xc0527551f6e63b31!8m2!3d32.9820763!4d-96.9194318!16s%2Fg%2F11b8v4mksn?entry=ttu&g_ep=EgoyMDI1MDMwMy4wIKXMDSoJLDEwMjExNDU1SAFQAw%3D%3D">
+            <img src="assets/imgs/placeholder.png" alt="">2548 Dickerson Pkway #102, Carrollton, TX 75006
+          </a>
+          <a href="tel:972-695-6162">
+            <img src="assets/imgs/telephone.png" alt=""> 972-695-6162
+          </a>
+          <a href="mailto:sgvarghese05@gmail.com">
+            <img src="assets/imgs/email.png" alt="">sgvarghese05@gmail.com
+          </a>
+        </div>
+
+      </footer>
+      <div class="closingLiner">
+        <p>&copy 2025 Palm India Restaurant. All rights reserved.</p>
+        <a href="https://robinmathew.dev" target="_blank">Powered by Robo Web Services</a>
+      </div>
+
      
     
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
