modified #about section, removed unnecessary divs and styles

--- a/index.html
+++ b/index.html
@@ -62,18 +62,14 @@
       </div>
 
       <section id="about">
-        <div class="about">
+        <!-- <div class="about"> -->
             <div class="aboutImages">
-                <div class="aboutImgOne">
-                    <img src="assets/imgs/raman-sqcH2q7lkvo-unsplash.jpg" alt="">
-                </div>
-                <div class="aboutImgTwo">
-                    <img src="assets/imgs/vinitha-v-LPnJ146r9Mg-unsplash.jpg" alt="">
-                </div>
+              <img src="assets/imgs/raman-sqcH2q7lkvo-unsplash.jpg" alt="">
+              <img src="assets/imgs/vinitha-v-LPnJ146r9Mg-unsplash.jpg" alt="">
             </div>
             <div class="aboutText">
                 <h3>About Us</h3>
-                <p>
+                <p><span>
                     "We offer delectable dining, takeaway, and delivery services. 
                     We are known for our delicious Indian food service and our 
                     innovative take on traditional cuisine. We have been praised 
@@ -85,10 +81,10 @@
                     Indian flavor, a blend of rich Indian spices, and a dash of love. 
                     We pledge to deliver cuisine prepared with the highest quality and 
                     freshest ingredients."
-                </p>
+                </span></p>
                 <button class="aboutBtn">Learn More</button>
             </div>
-        </div>
+        <!-- </div> -->
       </section>
 
       <section id="quote">
