updated padding on #about, #quote, & #footer

--- a/index.html
+++ b/index.html
@@ -88,7 +88,7 @@
       </section>
 
       <section id="quote">
-        <div class="quoteContainer">
+        <!-- <div class="quoteContainer"> -->
             <span class="quotation">"</span>
             <h3 class="quoteH3">
                 There is no sincerer love than the love of food.
@@ -96,8 +96,8 @@
             <p class="pCite">
                 George Bernard Shaw
             </p>
-            <span class="quotation quotationEnd"><i>"</i></span>
-        </div>
+            <i class="quotationEnd">"</i>
+        <!-- </div> -->
       </section>
 
       <section id="services">
