completed styles for smaller screen sizes for about section

--- a/index.html
+++ b/index.html
@@ -103,10 +103,10 @@
       <section id="services">
         <div class="services">
             <div class="serviceImgs">
-                <div class="serviceImg1">
+                <div class="serviceImg">
                     <img src="/assets/imgs/jacob-antony-H0_rN4gHc4k-unsplash.jpg" alt="">
                 </div>
-                <div class="serviceImg2">
+                <div class="serviceImg">
                     <img src="assets/imgs/saktheeswaran-govindarajan-yCIcDyKm440-unsplash.jpg" alt="">
                 </div>
             </div>
