--- a/index.html
+++ b/index.html
@@ -101,14 +101,14 @@
       </section>
 
       <section id="services">
-        <div class="services">
+        <!-- <div class="services"> -->
             <div class="serviceImgs">
-                <div class="serviceImg">
+                <!-- <div class="serviceImg"> -->
                     <img src="/assets/imgs/jacob-antony-H0_rN4gHc4k-unsplash.jpg" alt="">
-                </div>
-                <div class="serviceImg">
+                <!-- </div> -->
+                <!-- <div class="serviceImg"> -->
                     <img src="assets/imgs/saktheeswaran-govindarajan-yCIcDyKm440-unsplash.jpg" alt="">
-                </div>
+                <!-- </div> -->
             </div>
 
             <div class="serviceOfferings">
@@ -128,7 +128,7 @@
                     <p>We are here to answer any queries during our operating hours</p>
                 </div>
             </div>
-        </div>
+        <!-- </div> -->
       </section>
       
       <section id="favorites">
