changed spacing of .quotation and .quotationEnd for small screen sizes

--- a/index.html
+++ b/index.html
@@ -88,7 +88,7 @@
       </section>
 
       <section id="quote">
-            <span class="quotation">"</span>
+            <i class="quotation">"</i>
             <h3 class="quoteH3">
                 There is no sincerer love than the love of food.
             </h3>
