added .mainMenu with menuBtns and .dividers

--- a/menu.html
+++ b/menu.html
@@ -46,9 +46,74 @@
                     <h3>Menu</h3>
                 </div>
             </div>
+
             <div class="mainMenu">
-                <div class="mainOptions">
-                    
+                <div class="menuOptions">
+                    <div class="menuBtns">
+                        <button class="all highlight">All</button>
+                        <div class="divider">|</div>
+                    </div>
+                    <div class="menuBtns">
+                        <button class="all">Appetizers</button>
+                        <div class="divider">|</div>
+                    </div>
+                    <div class="menuBtns">
+                        <button class="all">Mutton Entrees</button>
+                        <div class="divider">|</div>
+                    </div>
+                    <div class="menuBtns">
+                        <button class="all">Chicken Entrees</button>
+                        <div class="divider">|</div>
+                    </div>
+                    <div class="menuBtns">
+                        <button class="all">Beef Entrees</button>
+                        <div class="divider">|</div>
+                    </div>
+                    <div class="menuBtns">
+                        <button class="all">Fish Entrees</button>
+                        <div class="divider">|</div>
+                    </div>
+                    <div class="menuBtns">
+                        <button class="all">Vegetables</button>
+                        <div class="divider">|</div>
+                    </div>
+                    <div class="menuBtns">
+                        <button class="all">Indo Chinese</button>
+                        <div class="divider">|</div>
+                    </div>
+                    <div class="menuBtns">
+                        <button class="all">Combos</button>
+                        <div class="divider">|</div>
+                    </div>
+                    <div class="menuBtns">
+                        <button class="all">Special Combos</button>
+                        <div class="divider">|</div>
+                    </div>
+                    <div class="menuBtns">
+                        <button class="all">Beverages</button>
+                        <div class="divider">|</div>
+                    </div>
+                    <div class="menuBtns">
+                        <button class="all">Indian Breads</button>
+                        <div class="divider">|</div>
+                    </div>
+                    <div class="menuBtns">
+                        <button class="all">Rice & Noodles</button>
+                        <div class="divider">|</div>
+                    </div>
+                    <div class="menuBtns">
+                        <button class="all">Biriyani Specials</button>
+                        <div class="divider">|</div>
+                    </div>
+                    <div class="menuBtns">
+                        <button class="all">Dosa Specials</button>
+                        <div class="divider">|</div>
+                    </div>
+                    <div class="menuBtns">
+                        <button class="all">Deserts</button>
+                        <div class="divider">|</div>
+                    </div>
+
                 </div>
             </div>
         </div>
