added .menuSections, and #appetizers with 2 imgs

--- a/menu.html
+++ b/menu.html
@@ -113,8 +113,155 @@
                         <button class="all">Deserts</button>
                         <div class="divider">|</div>
                     </div>
-
                 </div>
+
+                <div class="exp"></div>
+                 <div class="menuSections"> <!--exp ng-star-inserted -->
+                    <div id="appetizers"> <!--appetizers-->
+                        <div class="sectionText"> <!--cateogory-tab -->
+                            <h3>Appetizers</h3>
+                            <div class="png"> <!--png-->
+                                <img src="assets/imgs/chevron-double-down.svg" alt="">
+                            </div>
+                            <div class="openCloseBtn"> <!--tab-->
+                                <button class="openClose">-</button>
+                            </div>
+                        </div>
+                        <div class="inner-container"> <!--Inner-container-->
+                            <div class="main-container">
+                                <div class="logo"> <!--logo-->
+                                    <img src="assets/imgs/chicken65.jpg" alt="">
+                                </div>
+                                <div class="content">
+                                    <h3>Chicken 65</h3>
+                                    <p><span>$11.99</span></p>
+                                </div>
+                            </div>
+                            <div class="main-container">
+                                <div class="logo">
+                                    <img src="/assets/imgs/Kerala chicken fry.jpg" alt="">
+                                </div>
+                                <div class="content">
+                                    <h3>Kerala Chicken Fry</h3>
+                                    <p><span>$11.99</span></p>
+                                </div>
+                            </div>
+                            <div class="main-container">
+                                <div class="logo">
+                                    <img src="" alt="">
+                                </div>
+                                <div class="content">
+                                    <h3>Chilly Chicken Dry</h3>
+                                    <p><span>$11.99</span></p>
+                                </div>
+                            </div>
+                            <div class="main-container">
+                                <div class="logo">
+                                    <img src="" alt="">
+                                </div>
+                                <div class="content">
+                                    <h3>Gobi Manchurian</h3>
+                                    <p><span>$10.99</span></p>
+                                </div>
+                            </div>
+                            <div class="main-container">
+                                <div class="logo">
+                                    <img src="" alt="">
+                                </div>
+                                <div class="content">
+                                    <h3>Chicken Manchurian</h3>
+                                    <p><span>$10.99</span></p>
+                                </div>
+                            </div>
+                            <div class="main-container">
+                                <div class="logo">
+                                    <img src="" alt="">
+                                </div>
+                                <div class="content">
+                                    <h3>Chicken Pakora</h3>
+                                    <p><span>$10.99</span></p>
+                                </div>
+                            </div>
+                            <div class="main-container">
+                                <div class="logo">
+                                    <img src="" alt="">
+                                </div>
+                                <div class="content">
+                                    <h3>Beef Dry Fry (BDF)</h3>
+                                    <p><span>$16.99</span></p>
+                                </div>
+                            </div>
+
+                        </div>
+                    </div>
+                </div>
+
+                <div class="menuSections"> <!--exp ng-star-inserted -->
+                    <div id="muttonEntrees"> <!--appetizers-->
+                        <div class="sectionText"> <!--cateogory-tab -->
+                            <h3>Mutton Entrees</h3>
+                            <div class="png"> <!--png-->
+                                <img src="" alt="">
+                            </div>
+                            <div class="openCloseBtn"> <!--tab-->
+                                <button class="openClose">-</button>
+                            </div>
+                        </div>
+                        <div class="inner-container"> <!--Inner-container-->
+                            <div class="main-container">
+                                <div class="logo"> <!--logo-->
+                                    <img src="" alt="">
+                                </div>
+                                <div class="content">
+                                    <h3>Mutton Curry (goat)</h3>
+                                    <p><span>$14.99</span></p>
+                                </div>
+                            </div>
+                            <div class="main-container">
+                                <div class="logo">
+                                    <img src="" alt="">
+                                </div>
+                                <div class="content">
+                                    <h3>Mutton Stew</h3>
+                                    <p><span>$14.99</span></p>
+                                </div>
+                            </div>
+                            <div class="main-container">
+                                <div class="logo">
+                                    <img src="" alt="">
+                                </div>
+                                <div class="content">
+                                    <h3>Mutton Roast</h3>
+                                    <p><span>$15.99</span></p>
+                                </div>
+                            </div>
+                            <div class="main-container">
+                                <div class="logo">
+                                    <img src="" alt="">
+                                </div>
+                                <div class="content">
+                                    <h3>Kadai Mutton</h3>
+                                    <p><span>$14.99</span></p>
+                                </div>
+                            </div>
+                            <div class="main-container">
+                                <div class="logo">
+                                    <img src="" alt="">
+                                </div>
+                                <div class="content">
+                                    <h3>Mutton Korma</h3>
+                                    <p><span>$14.99</span></p>
+                                </div>
+                            </div>
+                            
+                            
+
+                        </div>
+                    </div>
+                </div>
+
+
+
             </div>
         </div>
 
