finished images for chicken and mutton entrees sections

--- a/menu.html
+++ b/menu.html
@@ -148,16 +148,16 @@
                             </div>
                             <div class="main-container">
                                 <div class="logo">
-                                    <img src="" alt="">
+                                    <img src="/assets/imgs/chilliChicken.jpeg" alt="">
                                 </div>
                                 <div class="content">
-                                    <h3>Chilly Chicken Dry</h3>
+                                    <h3>Chili Chicken Dry</h3>
                                     <p><span>$11.99</span></p>
                                 </div>
                             </div>
                             <div class="main-container">
                                 <div class="logo">
-                                    <img src="" alt="">
+                                    <img src="/assets/imgs/Gobi_Manchurian.jpg" alt="">
                                 </div>
                                 <div class="content">
                                     <h3>Gobi Manchurian</h3>
@@ -166,7 +166,7 @@
                             </div>
                             <div class="main-container">
                                 <div class="logo">
-                                    <img src="" alt="">
+                                    <img src="/assets/imgs/chickenManchurian.jpg" alt="">
                                 </div>
                                 <div class="content">
                                     <h3>Chicken Manchurian</h3>
@@ -175,7 +175,7 @@
                             </div>
                             <div class="main-container">
                                 <div class="logo">
-                                    <img src="" alt="">
+                                    <img src="/assets/imgs/chicken-pakora-8.jpg" alt="">
                                 </div>
                                 <div class="content">
                                     <h3>Chicken Pakora</h3>
@@ -184,7 +184,7 @@
                             </div>
                             <div class="main-container">
                                 <div class="logo">
-                                    <img src="" alt="">
+                                    <img src="/assets/imgs/beefDryFry.jpg" alt="">
                                 </div>
                                 <div class="content">
                                     <h3>Beef Dry Fry (BDF)</h3>
@@ -201,7 +201,7 @@
                         <div class="sectionText"> <!--cateogory-tab -->
                             <h3>Mutton Entrees</h3>
                             <div class="png"> <!--png-->
-                                <img src="" alt="">
+                                <img src="assets/imgs/chevron-double-down.svg" alt="">
                             </div>
                             <div class="openCloseBtn"> <!--tab-->
                                 <button class="openClose">-</button>
@@ -210,7 +210,7 @@
                         <div class="inner-container"> <!--Inner-container-->
                             <div class="main-container">
                                 <div class="logo"> <!--logo-->
-                                    <img src="" alt="">
+                                    <img src="assets/imgs/muttonCurry.jpg" alt="">
                                 </div>
                                 <div class="content">
                                     <h3>Mutton Curry (goat)</h3>
@@ -219,7 +219,7 @@
                             </div>
                             <div class="main-container">
                                 <div class="logo">
-                                    <img src="" alt="">
+                                    <img src="assets/imgs/muttonStew.jpg" alt="">
                                 </div>
                                 <div class="content">
                                     <h3>Mutton Stew</h3>
@@ -228,7 +228,7 @@
                             </div>
                             <div class="main-container">
                                 <div class="logo">
-                                    <img src="" alt="">
+                                    <img src="assets/imgs/muttonRoast.jpg" alt="">
                                 </div>
                                 <div class="content">
                                     <h3>Mutton Roast</h3>
@@ -237,7 +237,7 @@
                             </div>
                             <div class="main-container">
                                 <div class="logo">
-                                    <img src="" alt="">
+                                    <img src="assets/imgs/kadaiMutton.webp" alt="">
                                 </div>
                                 <div class="content">
                                     <h3>Kadai Mutton</h3>
@@ -246,7 +246,7 @@
                             </div>
                             <div class="main-container">
                                 <div class="logo">
-                                    <img src="" alt="">
+                                    <img src="assets/imgs/muttonKorma.jpg" alt="">
                                 </div>
                                 <div class="content">
                                     <h3>Mutton Korma</h3>
