--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
     <nav class="navbar navbar-expand-lg bg-body-tertiary nav sticky-top">
         <div class="container-fluid">
         <!-- Logo on the left -->
-        <a class="navbar-brand" href="#">
+        <a class="navbar-brand" href="index.html">
             <img src="/assets/imgs/a2b5fe31-f4cd-4590-8b94-4918a33076e2_logo.jpg" alt="Bootstrap" width="30" height="24">
         </a>
         <!-- Mobile menu button -->
@@ -191,7 +191,7 @@
       </section>
 
       <footer id="footer">
-        <div class="logo">
+        <div class="footerLogo">
           <img src="assets/imgs/a2b5fe31-f4cd-4590-8b94-4918a33076e2_logo.jpg" alt="">
           <div class="socials">
             <a href="https://www.facebook.com/PalmIndiaPIR" target="_blank" class="facebook">
