added imgs for fish section

--- a/menu.html
+++ b/menu.html
@@ -339,9 +339,9 @@
 
                 <!-- Beef -->
                 <div class="menuSections"> <!--exp ng-star-inserted -->
-                    <div id="appetizers"> <!--appetizers-->
+                    <div id="beefEntrees"> <!--appetizers-->
                         <div class="sectionText"> <!--cateogory-tab -->
-                            <h3>Appetizers</h3>
+                            <h3>Beef Entrees</h3>
                             <div class="png"> <!--png-->
                                 <img src="assets/imgs/chevron-double-down.svg" alt="">
                             </div>
@@ -352,65 +352,38 @@
                         <div class="inner-container"> <!--Inner-container-->
                             <div class="main-container">
                                 <div class="logo"> <!--logo-->
-                                    <img src="assets/imgs/chicken65.jpg" alt="">
+                                    <img src="assets/imgs/beefFry.jpg" alt="">
                                 </div>
                                 <div class="content">
-                                    <h3>Chicken 65</h3>
-                                    <p><span>$11.99</span></p>
+                                    <h3>Beef Fry</h3>
+                                    <p><span>$13.99</span></p>
                                 </div>
                             </div>
                             <div class="main-container">
                                 <div class="logo">
-                                    <img src="/assets/imgs/Kerala chicken fry.jpg" alt="">
+                                    <img src="/assets/imgs/beefRoast.jpg" alt="">
                                 </div>
                                 <div class="content">
-                                    <h3>Kerala Chicken Fry</h3>
-                                    <p><span>$11.99</span></p>
+                                    <h3>Beef Roast</h3>
+                                    <p><span>$12.99</span></p>
                                 </div>
                             </div>
                             <div class="main-container">
                                 <div class="logo">
-                                    <img src="/assets/imgs/chilliChicken.jpeg" alt="">
+                                    <img src="/assets/imgs/beefCurry.jpg" alt="">
                                 </div>
                                 <div class="content">
-                                    <h3>Chili Chicken Dry</h3>
-                                    <p><span>$11.99</span></p>
+                                    <h3>Beef Curry</h3>
+                                    <p><span>$12.99</span></p>
                                 </div>
                             </div>
                             <div class="main-container">
                                 <div class="logo">
-                                    <img src="/assets/imgs/Gobi_Manchurian.jpg" alt="">
+                                    <img src="/assets/imgs/beefStew.jpg" alt="">
                                 </div>
                                 <div class="content">
-                                    <h3>Gobi Manchurian</h3>
-                                    <p><span>$10.99</span></p>
-                                </div>
-                            </div>
-                            <div class="main-container">
-                                <div class="logo">
-                                    <img src="/assets/imgs/chickenManchurian.jpg" alt="">
-                                </div>
-                                <div class="content">
-                                    <h3>Chicken Manchurian</h3>
-                                    <p><span>$10.99</span></p>
-                                </div>
-                            </div>
-                            <div class="main-container">
-                                <div class="logo">
-                                    <img src="/assets/imgs/chicken-pakora-8.jpg" alt="">
-                                </div>
-                                <div class="content">
-                                    <h3>Chicken Pakora</h3>
-                                    <p><span>$10.99</span></p>
-                                </div>
-                            </div>
-                            <div class="main-container">
-                                <div class="logo">
-                                    <img src="assets/imgs/beefDryFry.jpg" alt="">
-                                </div>
-                                <div class="content">
-                                    <h3>Beef Dry Fry (BDF)</h3>
-                                    <p><span>$16.99</span></p>
+                                    <h3>Beef Stew</h3>
+                                    <p><span>$13.99</span></p>
                                 </div>
                             </div>
                         </div>
@@ -421,7 +394,7 @@
                 <div class="menuSections"> <!--exp ng-star-inserted -->
                     <div id="appetizers"> <!--appetizers-->
                         <div class="sectionText"> <!--cateogory-tab -->
-                            <h3>Appetizers</h3>
+                            <h3>Fish Entrees</h3>
                             <div class="png"> <!--png-->
                                 <img src="assets/imgs/chevron-double-down.svg" alt="">
                             </div>
@@ -432,65 +405,65 @@
                         <div class="inner-container"> <!--Inner-container-->
                             <div class="main-container">
                                 <div class="logo"> <!--logo-->
-                                    <img src="assets/imgs/chicken65.jpg" alt="">
+                                    <img src="assets/imgs/fishCurry.jpg" alt="">
                                 </div>
                                 <div class="content">
-                                    <h3>Chicken 65</h3>
-                                    <p><span>$11.99</span></p>
+                                    <h3>Fish Curry</h3>
+                                    <p><span>$13.99</span></p>
                                 </div>
                             </div>
                             <div class="main-container">
                                 <div class="logo">
-                                    <img src="/assets/imgs/Kerala chicken fry.jpg" alt="">
+                                    <img src="/assets/imgs/fishMolly.jpg" alt="">
                                 </div>
                                 <div class="content">
-                                    <h3>Kerala Chicken Fry</h3>
-                                    <p><span>$11.99</span></p>
+                                    <h3>Fish Molly</h3>
+                                    <p><span>$13.99</span></p>
                                 </div>
                             </div>
                             <div class="main-container">
                                 <div class="logo">
-                                    <img src="/assets/imgs/chilliChicken.jpeg" alt="">
+                                    <img src="/assets/imgs/a2b5fe31-f4cd-4590-8b94-4918a33076e2_logo.jpg" alt="">
                                 </div>
                                 <div class="content">
-                                    <h3>Chili Chicken Dry</h3>
-                                    <p><span>$11.99</span></p>
+                                    <h3>Fish Fry (Fish of the Day)</h3>
+                                    <p><span>$Market-Rate</span></p>
                                 </div>
                             </div>
                             <div class="main-container">
                                 <div class="logo">
-                                    <img src="/assets/imgs/Gobi_Manchurian.jpg" alt="">
+                                    <img src="/assets/imgs/shrimpCurry.jpg" alt="">
                                 </div>
                                 <div class="content">
-                                    <h3>Gobi Manchurian</h3>
+                                    <h3>Shrimp Curry</h3>
                                     <p><span>$10.99</span></p>
                                 </div>
                             </div>
                             <div class="main-container">
                                 <div class="logo">
-                                    <img src="/assets/imgs/chickenManchurian.jpg" alt="">
+                                    <img src="/assets/imgs/ayala.jpg" alt="">
                                 </div>
                                 <div class="content">
-                                    <h3>Chicken Manchurian</h3>
+                                    <h3>Fish Coconut Curry Mackerel (Ayala)</h3>
                                     <p><span>$10.99</span></p>
                                 </div>
                             </div>
                             <div class="main-container">
                                 <div class="logo">
-                                    <img src="/assets/imgs/chicken-pakora-8.jpg" alt="">
+                                    <img src="/assets/imgs/Fish-Mappas-M3.jpg" alt="">
                                 </div>
                                 <div class="content">
-                                    <h3>Chicken Pakora</h3>
-                                    <p><span>$10.99</span></p>
+                                    <h3>Fish Mappas</h3>
+                                    <p><span>$12.99</span></p>
                                 </div>
                             </div>
                             <div class="main-container">
                                 <div class="logo">
-                                    <img src="assets/imgs/beefDryFry.jpg" alt="">
+                                    <img src="assets/imgs/meen_peera_recipe.jpg" alt="">
                                 </div>
                                 <div class="content">
-                                    <h3>Beef Dry Fry (BDF)</h3>
-                                    <p><span>$16.99</span></p>
+                                    <h3>Meen Peera</h3>
+                                    <p><span>$9.99</span></p>
                                 </div>
                             </div>
                         </div>
